packages/errors/test/__snapshots__/AUTOMATION_SERVER_DISCONNECTED.ansi
[31mThe automation client disconnected. Cannot continue running tests.[39m